project-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phishing-ingress
spec:
  rules:
    - host: phishing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
